# libtrashcan

./: .cirrus.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  example.c
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: CMakeLists.txt  trashcan.c  trashcan.h
